<resources>

    <!-- App General Strings -->
    <string name="app_name">GrassRoots</string>

    <!-- Congress Tab Strings -->
    <string name="frag_overview">Overview</string>
    <string name="frag_vote_positions">Vote Positions</string>
    <string name="frag_office_expense">Office Expenses</string>

    <string name="ov_next_election">Next Election</string>
    <string name="ov_voting_snapshot">Voting Snapshot</string>
    <string name="ov_contact_info">Contact Info</string>
    <string name="ov_fec_id_number">FEC ID Number</string>

    <string-array name="years">
        <item></item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
    </string-array>

    <string-array name="quarter">
        <item></item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="category">
        <item>Agriculture and Food</item>
        <item>Animals</item>
        <item>Armed Forces and National Security</item>
        <item>Arts, Culture, Religion</item>
        <item>Civil Rights and Liberties, Minority Issues</item>
        <item>Commerce</item>
        <item>Congress</item>
        <item>Crime and Law Enforcement</item>
        <item>Economics and Public Finance</item>
        <item>Education</item>
        <item>Emergency Management</item>
        <item>Energy</item>
        <item>Environmental Protection</item>
        <item>Families</item>
        <item>Finance and Financial Sector</item>
        <item>Foreign Trade and International Finance</item>
        <item>Government Operations and Politics</item>
        <item>Health</item>
        <item>Housing and Community Development </item>
        <item>Immigration</item>
        <item>International Affairs</item>
        <item>Labor and Employment</item>
        <item>Law</item>
        <item>Native Americans</item>
        <item>Public Lands and Natural Resources</item>
        <item>Science, Technology, Communications</item>
        <item>Social Sciences and History</item>
        <item>Social Welfare</item>
        <item>Sports and Recreation</item>
        <item>Taxation </item>
        <item>Transportation and Public Works</item>
        <item>Water Resources Development</item>

    </string-array>


    <!-- Petiton Strings -->
    <string name="main_feed">Petitions Feed</string>

    <string name="petition_title_text">What is your petition called?</string>
    <string name="petition_title_hint">Enter petition name</string>
    <string name="petition_title_info">"This is the first thing people will see about your petition. Get their attention with a short title that focuses on the change you’d like them to support."</string>

    <string name="petition_target_text">Who has the power to make this change?</string>
    <string name="petition_target_hint">Enter petition target</string>
    <string name="petition_target_info">Choose the recipient(s) of your petition. These are people or organizations with the power to solve your problem or take the action you’re demanding.</string>

    <string name="signature_goal_text">How many signatures do you plan to reach?</string>
    <string name="signature_goal_info">Enter signature goal</string>

    <string name="next">Save and Continue</string>

    <string name="petition_problem_text">Explain the problem you want to solve</string>
    <string name="petition_problem_info">People are more likely to support your petition if it’s clear why you care. Explain how this change will impact you, your family, or your community</string>
    <string name="petition_name">Petition Name</string>

    <!--Instructions-->

    <string name="instruction_view_oe"><b>The House of Representatives publishes quarterly reports detailing official office expenses by lawmakers. \n \nData is currently available from the 3rd quarter of 2009 to the 4th quarter of 2017. \n \nNewly elected representatives do not have any records as of yet. Please contact their office for more information. </b> </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="failed_login_text">Login Unsuccessful</string>


</resources>
